Add find by multiple predicates